[project]
name = "upskill-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MatCyt", email = "mateusz.cytrowski@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
