[project]
name = "upskill-package"
version = "0.1.0"
description = "Utility package for SharePoint operations via Microsoft Graph API"
readme = "README.md"
authors = [
    { name = "MatCyt", email = "mateusz.cytrowski@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra --tb=long"


# =============================================================================
# Ruff configuration: strict template
# =============================================================================

[tool.ruff]
line-length = 120

exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "_build",
    "build",
    "dist",
]

[tool.ruff.format]
docstring-code-format = true 

[tool.ruff.lint]
select = [
    # --- Core ---
    "F",        # Pyflakes — unused imports, undefined names, etc.
    "E", "W",   # pycodestyle — style errors and warnings
    "I",        # isort — import sorting
    "N",        # pep8-naming — naming conventions
    "UP",       # pyupgrade — modernize syntax for target Python version

    # --- Docstrings ---
    "D",        # pydocstyle — docstring presence and style

    # --- Bug prevention ---
    "B",        # flake8-bugbear — common bugs and design problems
    "S",        # flake8-bandit — security issues
    "DTZ",      # flake8-datetimez — enforce timezone-aware datetimes
    "A",        # flake8-builtins — don't shadow builtins
    "RSE",      # flake8-raise — unnecessary parentheses on raised exceptions
    "YTT",      # flake8-2020 — incorrect sys.version comparisons

    # --- Code quality ---
    "C4",       # flake8-comprehensions — better comprehensions
    "C90",      # mccabe — cyclomatic complexity
    "SIM",      # flake8-simplify — simplifiable code
    "RET",      # flake8-return — return statement issues
    "PIE",      # flake8-pie — misc. linting improvements
    "PERF",     # Perflint — performance anti-patterns
    "FURB",     # refurb — modernize code
    "RUF",      # Ruff-specific rules

    # --- Imports ---
    "ICN",      # flake8-import-conventions — conventional aliases
    "TID",      # flake8-tidy-imports — import hygiene
    "TC",       # flake8-type-checking — move type-only imports to TYPE_CHECKING

    # --- Type annotations ---
    "FA",       # flake8-future-annotations — enforce `from __future__ import annotations`

    # --- Logging & print ---
    "T20",      # flake8-print — disallow print() in production code
    "LOG",      # flake8-logging — logging best practices
    "G",        # flake8-logging-format — logging format string issues

    # --- Paths ---
    "PTH",      # flake8-use-pathlib — prefer pathlib over os.path

    # --- Testing ---
    "PT",       # flake8-pytest-style — pytest best practices

    # --- Functions ---
    "ARG",      # flake8-unused-arguments — unused function arguments
    "FBT",      # flake8-boolean-trap — boolean positional arguments
    
    # --- Exception handling ---
    "TRY",      # tryceratops — try/except best practices
    
    # --- Pylint subset ---
    "PL",       # Pylint — errors, refactoring, conventions, warnings
]

ignore = [
    # ---- Formatter conflicts (safe to ignore when using ruff format) ----
    "W191",     # tab-indentation
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-not-multiple-of-four (comment)
    "E117",     # over-indented
    "COM812",   # missing-trailing-comma
    "ISC001",   # single-line-implicit-string-concatenation

    # ---- Line length ----
    "E501",     # line-too-long — handled by the formatter

    # ---- Opinionated ----
    "RET504",   # unnecessary-assign — assigning before return aids debugging
    # "PLR2004",  # magic-value-comparison — too noisy for general use
    "FBT001",   # boolean-typed-positional-argument — too strict for libraries with boolean flags
    "FBT002",   # boolean-default-positional-argument — same as above
    "G004",   # uses of f-strings to format logging messages
    "TRY003",   # raise-vanilla-args — requiring custom exceptions for every message is too strict
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 130  # hard limit; formatter wraps at 120

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 10
max-returns = 6
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"  # enforce absolute imports

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",     # unused-import — re-exports are common in __init__.py
    "D104",     # missing-docstring-in-public-package
    "TID252",   # relative-imports — __init__.py commonly re-exports via relative imports
]